--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+
+<head>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amiri">
+<style>
+body {
+  font-family: "Amiri", sans-serif;
+}
+</style>
+</head>
+
 <html>
 <body>
 <h1>Herzlich Willkommen</h1>
