--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 
 <head>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amiri">
-<style>
-body {
-  font-family: "Amiri", sans-serif;
-}
-</style>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amiri">
+  <style>
+    body {
+      font-family: "Amiri", sans-serif;
+    }
+  </style>
 </head>
 
-<html>
-<body>
-<h1>Herzlich Willkommen</h1>
-<p>Erste Testseite für den Informatiktag Sachsen-Anhalt.</p>
-</body>
+<html lang="de">
+  <body>
+    <h1>1. Informatiktag Sachsen-Anhalt</h1>
+    <p>Liebe Informatiklehrer:innen,
+    wir laden Sie herzlich zum 1. Informatiktag Sachsen-Anhalt im November 2025 nach Halle ein. Das genaue Datum wird noch bekannt gegeben.
+    </p>
+    <p>
+      Sie erwarten mehrere Workshops zu aktuellen und etablierten Themen rund um den Informatikunterricht. Daneben wird es Raum für einen informellen Austausch geben.
+    </p>
+    <p>
+      In den nächsten Woche werden wir Ihnen weitere Informationen zur Anmeldung auf dieser Webseite zur Verfügung stellen.
+    </p>
+    <p>
+      Bis dahin,
+      das Team der Didaktik der Informatik 
+    </p>
+  </body>
 </html>
