--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
   <body>
     <h1>1. Informatiktag Sachsen-Anhalt</h1>
     <p>Liebe Informatiklehrer:innen,
-    <br><br>
+    <br>
     wir laden Sie herzlich zum 1. Informatiktag Sachsen-Anhalt im November 2025 nach Halle ein. Das genaue Datum wird noch bekannt gegeben.
     </p>
+    
+    <br>
+    
     <p>
-      Sie erwarten mehrere Workshops zu aktuellen und etablierten Themen rund um den Informatikunterricht. Daneben wird es Raum für einen informellen Austausch geben.
+      Sie erwarten mehrere Workshops zu aktuellen und etablierten Themen rund um den Informatikunterricht.
+      <br>
+      Daneben wird es Raum für einen informellen Austausch geben.
     </p>
     <p>
       In den nächsten Woche werden wir Ihnen weitere Informationen zur Anmeldung auf dieser Webseite zur Verfügung stellen.
