--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <h1>1. Informatiktag Sachsen-Anhalt</h1>
     <p>Liebe Informatiklehrer:innen,
     <br>
-    wir laden Sie herzlich zum 1. Informatiktag Sachsen-Anhalt im November 2025 nach Halle ein. Das genaue Datum wird noch bekannt gegeben.
-    </p>
-    
+    wir laden Sie herzlich zum 1. Informatiktag Sachsen-Anhalt im November 2025 nach Halle ein.
     <br>
-    
+    Das genaue Datum wird noch bekannt gegeben.
+    </p>
+    <br>
     <p>
       Sie erwarten mehrere Workshops zu aktuellen und etablierten Themen rund um den Informatikunterricht.
       <br>
@@ -29,8 +29,10 @@
     </p>
     <p>
       Bis dahin,
-      <br><br>
-      das Team der Didaktik der Informatik 
+      <br>
+      das Team der Didaktik der Informatik
+      <br>
+      der Uni Halle-Wittenberg
     </p>
   </body>
 </html>
