--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
   <body>
     <h1>1. Informatiktag Sachsen-Anhalt</h1>
     <p>Liebe Informatiklehrer:innen,
-    <br>
-    wir laden Sie herzlich zum 1. Informatiktag Sachsen-Anhalt im November 2025 nach Halle ein.
-    <br>
-    Das genaue Datum wird noch bekannt gegeben.
+      <br>
+      wir laden Sie herzlich zum 1. Informatiktag Sachsen-Anhalt im November 2025 nach Halle ein.
+      <br>
+      Das genaue Datum wird noch bekannt gegeben.
     </p>
     <br>
-    <p>
-      Sie erwarten mehrere Workshops zu aktuellen und etablierten Themen rund um den Informatikunterricht.
+    <p>Sie erwarten mehrere Workshops zu aktuellen und etablierten Themen rund um den Informatikunterricht.
       <br>
       Daneben wird es Raum für einen informellen Austausch geben.
     </p>
