--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <p>Sie erwarten mehrere Workshops zu aktuellen und etablierten Themen rund um den Informatikunterricht.
       <br>
-      Daneben wird es Raum für einen informellen Austausch geben.
+      Daneben wird es auch Raum für informellen Austausch geben.
     </p>
     
     <p>
