--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <style>
     body {
       font-family: "Amiri", sans-serif;
-      font-size: "200%";
+      font-size: 200%;
     }
   </style>
 </head>
