--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     body {
       font-family: "Amiri", sans-serif;
       font-size: 200%;
+      font-solor: white;
+      background-color: rgb(40,40,40);
     }
   </style>
 </head>
