--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     body {
       font-family: "Amiri", sans-serif;
       font-size: 200%;
-      font-solor: white;
+      font-color: white;
       background-color: rgb(40,40,40);
     }
   </style>
