--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<title>1. Informatiktag Sachsen-Anhalt</title>
 
 <head>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amiri">
