--- a/index.html
+++ b/index.html
@@ -40,5 +40,25 @@
       <br>
       der Uni Halle-Wittenberg
     </p>
+      <br><br>
+    <p>
+      Vorläufige Planung | Stand: 11/2024
+      <br>
+      Anmeldung: 09:00--10:00 Uhr
+      <br>
+      Begrüßung: 10:00--11:00 Uhr
+      <br>
+      Kaffeepause: 11:00--11:30 Uhr
+      <br>
+      Workshopsschiene 1: 11:30--13:00 Uhr
+      <br>
+      Mittagspause: 13:00--14:00 Uhr
+      <br>
+      Workshopschiene 2: 14:00--15:30 Uhr
+      <br>
+      Öffentliche Sitzung der FG IBST: 15:30 Uhr--16:15 Uhr
+      <br>
+      Verabschiedung: 16:15--16:30 Uhr
+    </p>
   </body>
 </html>
