--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <p>
       Vorläufige Planung | Stand: 11/2024
       <br>
-      Anmeldung: 09:00--10:00 Uhr
+      Anmeldung: 09:00&ndash;10:00 Uhr
       <br>
       Begrüßung: 10:00--11:00 Uhr
       <br>
