--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
       <br>
       der Uni Halle-Wittenberg
     </p>
-      <br><br>
+      <hr>
     <p>
       Vorläufige Planung | Stand: 11/2024
       <br>
       Anmeldung: 09:00&ndash;10:00 Uhr
       <br>
-      Begrüßung: 10:00--11:00 Uhr
+      Begrüßung: 10:00&ndash;11:00 Uhr
       <br>
-      Kaffeepause: 11:00--11:30 Uhr
+      Kaffeepause: 11:00&ndash;11:30 Uhr
       <br>
-      Workshopsschiene 1: 11:30--13:00 Uhr
+      Workshopsschiene 1: 11:30&ndash;13:00 Uhr
       <br>
-      Mittagspause: 13:00--14:00 Uhr
+      Mittagspause: 13:00&ndash;14:00 Uhr
       <br>
-      Workshopschiene 2: 14:00--15:30 Uhr
+      Workshopschiene 2: 14:00&ndash;15:30 Uhr
       <br>
-      Öffentliche Sitzung der FG IBST: 15:30 Uhr--16:15 Uhr
+      Öffentliche Sitzung der FG IBST: 15:30 Uhr&ndash;16:15 Uhr
       <br>
-      Verabschiedung: 16:15--16:30 Uhr
+      Verabschiedung: 16:15&ndash;16:30 Uhr
     </p>
   </body>
 </html>
