--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <title>1. Informatiktag Sachsen-Anhalt</title>
 
+<meta name="description" content="Wir laden alle Informatiklehrer:innen aus Sachsen-Anhalt am 21. November 2025 herzlich zum 1. Informatiktag nach Halle ein.">
+
 <head>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amiri">
   <style>
@@ -42,7 +44,7 @@
     </p>
       <hr>
     <p>
-      Vorläufige Planung | Stand: 11/2024
+      <h2></h2>Vorläufige Planung | Stand: 11/2024</h2>
       <br>
       Anmeldung: 09:00&ndash;10:00 Uhr
       <br>
