--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amiri">
   <style>
     body {
-      font-family: "Alice", serif;
+      font-family: "Amiri", sans-serif;
       font-size: 200%;
       color: white;
       background-color: rgb(40,40,40);
