--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <style>
     body {
       font-family: "Amiri", sans-serif;
-      font-size: 200%;
+      <!font-size: 200%;>
+      font-size: clamp(2.25rem, 1.467rem + 3.913vw, 4.5rem)
       color: white;
       background-color: rgb(40,40,40);
     }
