--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       font-family: "Amiri", sans-serif;
       <!font-size: 200%;>
-      font-size: clamp(4.25rem, 1.467rem + 3.913vw, 6.5rem);
+      font-size: clamp(200px, 40%, 400px);
       color: white;
       background-color: rgb(40,40,40);
     }
