--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       font-family: "Amiri", sans-serif;
       <!font-size: 200%;>
-      font-size: clamp(500px, 200%, 800px);
+      font-size: clamp(32px, 400%, 150px)
       color: white;
       background-color: rgb(40,40,40);
     }
