--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: "Amiri", sans-serif;
-      font-size: clamp(32px, 400%, 150px)
+      font-size: clamp(32px, 400%, 150px);
       color: white;
       background-color: rgb(40,40,40);
     }
