--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: "Amiri", sans-serif;
-      font-size: clamp(42px, 300%, 48px);
+      font-size: clamp(2vw, 200%, 3vw);
       color: white;
       background-color: rgb(40,40,40);
     }
