--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <p>
       <h2></h2>Vorläufige Planung | Stand: 11/2024</h2>
       <br>
-      Anmeldung: 09:00&ndash;10:00 Uhr
+      Anmeldung: 09:30&ndash;10:00 Uhr
       <br>
       Begrüßung: 10:00&ndash;11:00 Uhr
       <br>
@@ -61,6 +61,8 @@
       Öffentliche Sitzung der FG IBST: 15:30 Uhr&ndash;16:15 Uhr
       <br>
       Verabschiedung: 16:15&ndash;16:30 Uhr
+      <br>
+      Offener Ausklang: 16:30&ndash;17:00 Uhr
     </p>
   </body>
 </html>
