--- a/index.html
+++ b/index.html
@@ -43,25 +43,30 @@
     </p>
     
     <hr>
+
+    <p>
+      <h2>Ort und Anfahrt</h2>
+      Der Informatiktag finden in den Räumlichkeit des Instituts für Informatik der Universität Halle-Wittenbrg statt. Diese befinden sich am Von-Seckendorff-Platz 1.
+    </p>
     
     <p>
-      <h2></h2>Vorläufige Planung | Stand: 11/2024</h2>
+      <h2></h2>Vorläufige Planung | Ort | Stand: 11/2024</h2>
       <br>
-      Anmeldung: 09:30&ndash;10:00 Uhr
+      Anmeldung: 09:30&ndash;10:00 Uhr (Raum TBA)
       <br>
-      Begrüßung: 10:00&ndash;11:00 Uhr
+      Begrüßung: 10:00&ndash;11:00 Uhr (Raum TBA)
       <br>
       Kaffeepause: 11:00&ndash;11:30 Uhr
       <br>
-      Workshopsschiene 1: 11:30&ndash;13:00 Uhr
+      Workshopsschiene 1: 11:30&ndash;13:00 Uhr (Raum TBA)
       <br>
       Mittagspause: 13:00&ndash;14:00 Uhr
       <br>
-      Workshopschiene 2: 14:00&ndash;15:30 Uhr
+      Workshopschiene 2: 14:00&ndash;15:30 Uhr (Raum TBA)
       <br>
-      Öffentliche Sitzung der FG IBST: 15:30 Uhr&ndash;16:15 Uhr
+      Öffentliche Sitzung der FG IBST: 15:30 Uhr&ndash;16:15 Uhr (Raum TBA)
       <br>
-      Verabschiedung: 16:15&ndash;16:30 Uhr
+      Verabschiedung: 16:15&ndash;16:30 Uhr (Raum TBA)
       <br>
       Offener Ausklang: 16:30&ndash;17:00 Uhr
     </p>
