--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
       <h2>Ort und Anfahrt</h2>
       Der Informatiktag finden in den Räumlichkeit des Instituts für Informatik der Universität Halle-Wittenbrg statt. Diese befinden sich am Von-Seckendorff-Platz 1.
     </p>
+
+    <hr>
     
     <p>
-      <h2></h2>Vorläufige Planung | Ort | Stand: 11/2024</h2>
+      <h2>Vorläufige Planung | Raum | Stand: 11/2024</h2>
       <br>
       Anmeldung: 09:30&ndash;10:00 Uhr (Raum TBA)
       <br>
