--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
       
       Der Informatiktag finden in den Räumlichkeit des Instituts für Informatik der Universität Halle-Wittenberg statt.
       <br>
-      Diese befinden sich am Von-Seckendorff-Platz 1. Es stehen ausreichend Parkplätze zur ANreise mit dem PKW zur Verfügung.
-      <br>
-      Bei Anreise mit dem ÖPNV nutzen Sie ab der Haltestelle Hauptbahnhof bitte die Straßenbahnlinie 4 (Richtung Kröllwitz) oder alternativ die Linie 5 (ebenfalls Richtung Kröllwitz).
+      Dieses befinden sich am Von-Seckendorff-Platz 1. Es stehen ausreichend Parkplätze zur Anreise mit dem PKW zur Verfügung. Bei Anreise mit dem ÖPNV nutzen Sie ab der Haltestelle Hauptbahnhof bitte die Straßenbahnlinie 4 (Richtung Kröllwitz) oder alternativ die Linie 5 (ebenfalls Richtung Kröllwitz).
     </p>
 
     <hr>
