--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       
       Der Informatiktag finden in den Räumlichkeit des Instituts für Informatik der Universität Halle-Wittenberg statt.
       <br>
-      Dieses befinden sich am <i>Von-Seckendorff-Platz 1</i>. Es stehen ausreichend Parkplätze zur Anreise mit dem PKW zur Verfügung. Bei Anreise mit dem ÖPNV nutzen Sie ab der Haltestelle <i>Hauptbahnhof</i> bitte die Straßenbahnlinie 4 (Richtung Kröllwitz) oder alternativ die Linie 5 (ebenfalls Richtung Kröllwitz) bis zu Haltestelle <i>Straßburger Weg</i>i>.
+      Dieses befinden sich am <i>Von-Seckendorff-Platz 1</i>. Es stehen ausreichend Parkplätze zur Anreise mit dem PKW zur Verfügung. Bei Anreise mit dem ÖPNV nutzen Sie ab der Haltestelle <i>Hauptbahnhof</i> bitte die Straßenbahnlinie 4 (Richtung Kröllwitz) oder alternativ die Linie 5 (ebenfalls Richtung Kröllwitz) bis zu Haltestelle <i>Straßburger Weg</i>.
     </p>
 
     <hr>
