--- a/index.html
+++ b/index.html
@@ -75,5 +75,25 @@
       <br>
       Offener Ausklang: 16:30&ndash;17:00 Uhr
     </p>
+
+    <hr>
+
+    <p>
+      <h2>Anmeldung</h2>
+
+      Zur Teilnahme am Informatiktag ist eine Anmeldung erforderlich. Diese ist ab dem 1. September bis zum 19. Oktober möglich. Die Anmeldung erfolgt über eine gsonderte Webseite, die demnächst hier verlinkt wird.
+    </p>
+
+    <hr>
+
+    <p>
+      <h2>FAQ</h2>
+
+      <ol>
+        <li>Ist eine Anmeldung erforderlich? Ja, da Sie vom Unterricht durch Ihre Schullitung freigestellt werden müssen. Zudem benötigen wir Ihre Anmeldung für die Koordination der Workshops.</li>
+        <l>Ich muss mich für den Informatiktag vom Unterriccht freistellen lassen. Wie funktioniert das?</l> Sie reichen bei Ihrer Schulleitung einen Antrag auf Sonderurlaub gemäß XXX ein.
+      </ol>
+      <li></li>
+    </p>
   </body>
 </html>
