--- a/index.html
+++ b/index.html
@@ -90,10 +90,9 @@
       <h2>FAQ</h2>
 
       <ul>
-        <li><b>Ist eine Anmeldung erforderlich?</b> Ja, da Sie vom Unterricht durch Ihre Schullitung freigestellt werden müssen. Zudem benötigen wir Ihre Anmeldung für die Koordination der Workshops.</li>
+        <li><b>Ist eine Anmeldung erforderlich?</b> Ja, da Sie eine Teilnahmebescheinigung zur Vorlage bei Ihrer Schulleitung benötigen. Zudem brauchen wir Ihre Anmeldedaten zur Koordination der Workshops.</li>
         <li><b>Ich muss mich für den Informatiktag vom Unterriccht freistellen lassen. Wie funktioniert das?</b> Sie reichen bei Ihrer Schulleitung einen Antrag auf Sonderurlaub gemäß XXX ein.</li>
       </ul>
-      <li></li>
     </p>
   </body>
 </html>
