--- a/index.html
+++ b/index.html
@@ -87,6 +87,20 @@
     <hr>
 
     <p>
+      <h2>Workshopstitel | Worklshopschiene | Dozent:in | Stand: 11/2024</h2>
+
+      Workshops werden in einer Vormittags- und einer Nachmittagsschiene angeboten, sodass Sie zwei Workshops besuchen können. Die Workshops wählen Sie bei Ihrer Anmeldung aus. Folgende Workshops werden angeboten:
+
+      <h3>Quanteninformatik | Schiene 1 & 2 | TBA</h3>
+
+      Beschreibung: XXX
+
+      <h3>Sprachen und Automaten mit FLACI | 1 und 2 | TBA</h3>
+
+      Beschreibung: XXX
+    </p>
+
+    <p>
       <h2>FAQ</h2>
 
       <ul>
