--- a/index.html
+++ b/index.html
@@ -87,18 +87,20 @@
     <hr>
 
     <p>
-      <h2>Workshopstitel | Worklshopschiene | Dozent:in | Stand: 11/2024</h2>
+      <h2>Workshopstitel | Worklshopschiene (S) | Dozent:in | Stand: 11/2024</h2>
 
-      Workshops werden in einer Vormittags- und einer Nachmittagsschiene angeboten, sodass Sie zwei Workshops besuchen können. Die Workshops wählen Sie bei Ihrer Anmeldung aus. Folgende Workshops werden angeboten:
+      Workshops werden in einer Vormittags- (S1) und einer Nachmittagsschiene (S2) angeboten, sodass Sie zwei Workshops besuchen können. Die Workshops wählen Sie bei Ihrer Anmeldung aus. Bitte beachten Sie, dass manche Workshops nur in einer der beiden Schienen angeboten werden. Aus folgenden Workshops können Sie wählen:
 
-      <h3>Quanteninformatik | Schiene 1 & 2 | TBA</h3>
+      <h3>Quanteninformatik | S1 & S2 | TBA</h3>
 
       Beschreibung: XXX
 
-      <h3>Sprachen und Automaten mit FLACI | 1 und 2 | TBA</h3>
+      <h3>Sprachen und Automaten mit FLACI | S1 & S2 | TBA</h3>
 
       Beschreibung: XXX
     </p>
+
+    <hr>
 
     <p>
       <h2>FAQ</h2>
