--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
     <hr>
 
     <p>
-      <h2>Workshopstitel | Worklshopschiene (S) | Dozent:in | Stand: 11/2024</h2>
+      <h2>Workshoptitel | Workshopschiene (S) | Dozent:in | Stand: 11/2024</h2>
 
-      Workshops werden in einer Vormittags- (S1) und einer Nachmittagsschiene (S2) angeboten, sodass Sie zwei Workshops besuchen können. Die Workshops wählen Sie bei Ihrer Anmeldung aus. Bitte beachten Sie, dass manche Workshops nur in einer der beiden Schienen angeboten werden. Aus folgenden Workshops können Sie wählen:
+      Workshops werden in einer Vormittags- (S1) und einer Nachmittagsschiene (S2) angeboten, sodass Sie zwei Workshops besuchen können. Die Workshops wählen Sie bei Ihrer Anmeldung. Bitte beachten Sie, dass manche Workshops nur in einer der beiden Schienen angeboten werden. Aus folgenden Workshops können Sie wählen:
 
-      <h3>Quanteninformatik | S1 & S2 | TBA</h3>
+      <h3>Einblick in die Quanteninformatik | S1 & S2 | TBA</h3>
 
       Beschreibung: XXX
 
