--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
       <br>
       Kaffeepause: 11:00&ndash;11:30 Uhr
       <br>
-      Workshopsschiene 1: 11:30&ndash;13:00 Uhr (siehe Workshopsbeschreibung)
+      Workshopsschiene 1: 11:30&ndash;13:00 Uhr (Raum siehe Workshopsbeschreibung)
       <br>
       Mittagspause: 13:00&ndash;14:00 Uhr
       <br>
-      Workshopschiene 2: 14:00&ndash;15:30 Uhr (siehe Workshopsbeschreibung)
+      Workshopschiene 2: 14:00&ndash;15:30 Uhr (Raum siehe Workshopsbeschreibung)
       <br>
       Öffentliche Sitzung der FG IBST: 15:30 Uhr&ndash;16:15 Uhr (Raum TBA)
       <br>
