--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<title>1. Informatiktag Sachsen-Anhalt</title>
-<meta name="description" content="Wir laden alle Informatiklehrer:innen aus Sachsen-Anhalt am 21. November 2025 herzlich zum 1. Informatiktag nach Halle ein.">
+<title>1. Informatiktag Sachsen-Anhalt 2025</title>
+<meta name="description" content="Wir laden alle Informatiklehrer:innen aus Sachsen-Anhalt am 21. November 2025 herzlich zum 1. Informatiktag 2025 nach Halle ein.">
 
 <head>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amiri">
@@ -16,7 +16,7 @@
 
 <html lang="de">
   <body>
-    <h1>1. Informatiktag Sachsen-Anhalt</h1>
+    <h1>1. Informatiktag Sachsen-Anhalt 2025</h1>
     
     <p>Liebe Informatiklehrer:innen,
       <br>
