--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <hr>
     
     <p>
-      <h2>Vorläufige Planung | Raum | Stand: 11/2024</h2>
+      <h2>Vorläufiger Ablauf | Raum | Stand: 11/2024</h2>
       
       Anmeldung: 09:30&ndash;10:00 Uhr (Raum TBA)
       <br>
