--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <br>
       Öffentliche Sitzung der FG IBST: 15:30 Uhr&ndash;16:15 Uhr (Raum TBA)
       <br>
-      Verabschiedung: 16:15&ndash;16:30 Uhr (Raum TBA)
+      Verabschiedung & Ausblick: 16:15&ndash;16:30 Uhr (Raum TBA)
       <br>
       Offener Ausklang: 16:30&ndash;17:00 Uhr
     </p>
