--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <title>1. Informatiktag Sachsen-Anhalt 2025</title>
-<meta name="description" content="Wir laden alle Informatiklehrer:innen aus Sachsen-Anhalt am 21. November 2025 herzlich zum 1. Informatiktag 2025 nach Halle ein.">
+<meta name="description" content="Wir laden alle Informatiklehrer:innen aus Sachsen-Anhalt am 2. Oktober 2025 herzlich zum 1. Informatiktag 2025 nach Halle ein.">
 
 <head>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amiri">
@@ -20,7 +20,7 @@
     
     <p>Liebe Informatiklehrer:innen,
       <br>
-      wir laden Sie herzlich zum 1. Informatiktag Sachsen-Anhalt im November 2025 nach Halle ein.
+      wir laden Sie herzlich zum 1. Informatiktag Sachsen-Anhalt im Oktober 2025 nach Halle ein.
       <br>
       Das genaue Datum wird noch bekannt gegeben.
     </p>
