--- a/index.html
+++ b/index.html
@@ -63,15 +63,17 @@
       <br>
       Workshopsschiene 1: 11:30&ndash;13:00 Uhr (Raum siehe Workshopsbeschreibung)
       <br>
-      Mittagspause: 13:00&ndash;14:00 Uhr
+      Mittagspause: 13:00&ndash;13:30 Uhr
       <br>
-      Workshopschiene 2: 14:00&ndash;15:30 Uhr (Raum siehe Workshopsbeschreibung)
+      Workshopschiene 2: 13:30&ndash;15:00 Uhr (Raum siehe Workshopsbeschreibung)
       <br>
-      Öffentliche Sitzung der FG IBST: 15:30 Uhr&ndash;16:15 Uhr (Raum TBA)
+      Kaffeepause: 15:00&ndash;15:15 Uhr
       <br>
-      Verabschiedung & Ausblick: 16:15&ndash;16:30 Uhr (Raum TBA)
+      Öffentliche Sitzung der FG IBST: 15:15 Uhr&ndash;16:00 Uhr (Raum TBA)
       <br>
-      Offener Ausklang: 16:30&ndash;17:00 Uhr
+      Verabschiedung & Ausblick: 16:00&ndash;16:15 Uhr (Raum TBA)
+      <br>
+      Offener Ausklang: 16:15&ndash;17:00 Uhr
     </p>
 
     <hr>
