--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
       <ul>
         <li><b>Ist eine Anmeldung erforderlich?</b> Ja, da Sie eine Teilnahmebescheinigung zur Vorlage bei Ihrer Schulleitung benötigen. Zudem brauchen wir Ihre Anmeldedaten zur Koordination der Workshops.</li>
-        <li><b>Ich muss mich für den Informatiktag vom Unterriccht freistellen lassen. Wie funktioniert das?</b> Sie reichen bei Ihrer Schulleitung einen Antrag auf Sonderurlaub gemäß XXX ein.</li>
+        <li><b>Ich muss mich für den Informatiktag vom Unterricht freistellen lassen. Wie funktioniert das?</b> Sie reichen bei Ihrer Schulleitung einen Antrag auf Sonderurlaub gemäß XXX ein.</li>
       </ul>
     </p>
   </body>
