--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <p>
       <h2>Anmeldung</h2>
 
-      Zur Teilnahme am Informatiktag ist eine Anmeldung erforderlich. Diese ist ab dem 1. September bis zum 19. Oktober möglich. Die Anmeldung erfolgt über eine gesonderte Webseite, die demnächst hier verlinkt wird. Pro Teilnehmer:in erheben wir einen Unkostenbeitrag von 10 €.
+      Zur Teilnahme am Informatiktag ist eine Anmeldung erforderlich. Diese ist ab dem 1. August bis zum 7. September möglich. Die Anmeldung erfolgt über eine eigene Webseite, die demnächst hier verlinkt wird. Pro Teilnehmer:in erheben wir einen Unkostenbeitrag von TBA €.
     </p>
 
     <hr>
