--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <br>
       Kaffeepause: 15:00&ndash;15:15 Uhr
       <br>
-      Öffentliche Sitzung der FG IBST: 15:15 Uhr&ndash;16:00 Uhr (Raum TBA)
+      Öffentliche Fachgruppensitzung: 15:15 Uhr&ndash;16:00 Uhr (Raum TBA)
       <br>
       Verabschiedung & Ausblick: 16:00&ndash;16:15 Uhr (Raum TBA)
       <br>
