--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <html lang="de">
   <body>
-    <h1>1. Informatiktag Sachsen-Anhalt 2025</h1>
+    <h1>informatiktag sachsen-anhalt 2025</h1>
     
     <p>Liebe Informatiklehrer:innen,
       <br>
