--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>1. Informatiktag Sachsen-Anhalt 2025</title>
+<title>informatiktag sachsen-anhalt 2025</title>
 <meta name="description" content="Wir laden alle Informatiklehrer:innen aus Sachsen-Anhalt am 2. Oktober 2025 herzlich zum 1. Informatiktag 2025 nach Halle ein.">
 
 <head>
