--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   <style>
     body {
       font-family: "Amiri", sans-serif;
-      <!--font-size: clamp(2vw, 200%, 3vw);-->
+      /*font-size: clamp(2vw, 200%, 3vw);*/
       color: white;
       background-color: rgb(40,40,40);
-      <!--font-size: 100%;-->
+      /*font-size: 100%;*/
       font-size: 5vw;
     }
     h1 {
       font-size: 10vw;
     }
     p {
-      font-size:5vw;
+      font-size:5vw
     }
   </style>
 </head>
