--- a/index.html
+++ b/index.html
@@ -3,23 +3,21 @@
 <meta name="description" content="Wir laden alle Informatiklehrer:innen aus Sachsen-Anhalt am X. Oktober 2025 herzlich zum 1. Informatiktag 2025 nach Halle ein.">
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amiri">
   
   <style>
     body {
       font-family: "Amiri", sans-serif;
-      /*font-size: clamp(2vw, 200%, 3vw);*/
+      font-size: clamp(2vw, 200%, 3vw);
       color: white;
       background-color: rgb(40,40,40);
       /*font-size: 100%;*/
-      font-size: 5vw;
     }
     h1 {
-      font-size: 10vw;
+      font-size: clamp(2vw, 200%, 3vw);
     }
     p {
-      font-size:5vw
+      font-size: clamp(2vw, 150%, 3vw);
     }
   </style>
 </head>
