--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
       <h3>Einblick in die Quanteninformatik | S1 & S2 | TBA</h3>
 
-      <p></p>Beschreibung: XXX</p>
+      <p>Beschreibung: XXX</p>
 
       <h3>Sprachen und Automaten mit FLACI | S1 & S2 | TBA</h3>
 
