--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<title>Informatiktag Sachsen-Anhalt 2025</title>
-<meta name="description" content="Wir laden alle Informatiklehrer:innen am 30. September 2025 herzlich zum 1. Informatiktag 2025 nach Halle ein.">
+<title>Informatiktag Sachsen-Anhalt 2026</title>
+<meta name="description" content="Wir laden alle Informatiklehrer:innen am ??. September/Oktober 2026 herzlich zum 1. Informatiktag 2026 nach Halle ein.">
 
 <head>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amiri">
@@ -31,7 +31,7 @@
     
     <p>Liebe Informatiklehrer:innen,
       <br>
-      wir laden Sie herzlich zum 1. Informatiktag Sachsen-Anhalt am 30. September 2025 nach Halle ein.
+      wir laden Sie herzlich zum 1. Informatiktag Sachsen-Anhalt am ??. September/Oktober 2026 nach Halle ein.
     </p>
     
     <p>Sie erwarten mehrere Workshops zu neuen und bestehenden Themen rund um den Informatikunterricht.
